--- a/index.html
+++ b/index.html
@@ -231,6 +231,16 @@
         </iframe>
       </div>
 
+        <div style="text-align:center; margin-top: 40px;">
+        <h2 style="color:#8338ec;">Our Latest YouTube Videos</h2>
+        <iframe width="100%" height="400" 
+          src="https://www.youtube.com/embed/videoseries?list=PLFUNiSf151kNHunpaJLzvhAVcsnrXG1kB"
+          frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+          allowfullscreen>
+        </iframe>
+      </div>
+
       <p>
         Or visit us on 
         <a href="https://www.instagram.com/sadgurucoachingclass/" target="_blank" style="color:#8338ec;">Instagram</a> and 
